--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "progress-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://javierescalante.info/progressDemo/",
   "dependencies": {
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
